# TecXBC

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
TecXBC/: block.py  chain.py  transaction.py  wallet.py
TecXBC/blockchain/: network.py  proof_of_work.py  server.py
api/: server.py
src/TecXBC/: script.py
