[project]
name = "TecXAT_BlockChain"
version = "0.0.1"
authors = [
  { name="Rahul Saini", email="cto@TecX.ai" },
]
description = "TecX BlockChain API package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GNU General Public License v3.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/TecXCTO/TecXBC"
Issues = "https://github.com/TecXCTO/TecXBC/issues"
